@@ -78,7 +78,7 @@ I have looked at the archives and the commits but did not find any solution. Doe
 
 <p>There are some questions that appear regularly on the mailing list. We have included the answers here for your convenience.</p>
 
-<h3> Does WebKit supports Foo? </h3>
+<h3> Does WebKit support Foo? </h3>
 
 <p>The most reliable way to answer it is by looking at the source code. WebKit development is fast
 paced. Often the requested feature is already implemented although it has
@@ -87,10 +87,10 @@ supports between different ports is not the same.</p>
 <p>The following links are also useful:</p>
 <ul>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(HTML)">Wikipedia comparison of the layout engines: HTML support</a><br></li>
-<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(XML)">Wikpedia comparison of the layout engines: XML support</a><br></li>
+<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(XML)">Wikipedia comparison of the layout engines: XML support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Cascading_Style_Sheets)">Wikipedia comparison of the layout engines: CSS support</a><br></li>
-<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Document_Object_Model)">Wikipedia comparision of the layout engines: DOM support</a><br></li>
-<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(HTML_5)">Wikipedia comparision of the layout engines: HTML5 support</a><br></li>
+<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Document_Object_Model)">Wikipedia comparison of the layout engines: DOM support</a><br></li>
+<li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(HTML_5)">Wikipedia comparison of the layout engines: HTML5 support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(ECMAScript)">Wikipedia comparison of the layout engines: ECMAScript support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Scalable_Vector_Graphics)">Wikipedia comparison of the layout engines: SVG support</a><br></li>
 <li><a href="http://en.wikipedia.org/wiki/Comparison_of_layout_engines_(Non-standard_HTML)">Wikipedia comparison of the layout engines: non standard HTML support</a><br></li>
@@ -98,11 +98,11 @@ supports between different ports is not the same.</p>
 
 <h3> I want to port WebKit to a new platform </h3>
 
-<p>As a starting point, check first <a href="http://trac.webkit.org/wiki/SuccessfulPortHowTo">the sucessful port how to page</a>.</p>
+<p>As a starting point, first check <a href="http://trac.webkit.org/wiki/SuccessfulPortHowTo">the successful port how to page</a>.</p>
 
 <p>Granted, it's not complete, so feel free to contribute. Try to find a port similar to what you are targeting and use it
-as a basis, instead of writing everything from scratch. While doing your port, you may find that you wished the page had 
-mentioned that fact. Please modify the page and add it.</p>
+as a basis, instead of writing everything from scratch. While working on your port, you may find that you wished the page had 
+mentioned something. If so, please modify the page and add it.</p>
 
 <h3> How does bar work? </h3>
 
